<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout_one"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/content_description_avatar"
                app:civ_border_color="@color/colorBackground"
                app:civ_border_width="1dp"
                tools:src="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Jake Wharton" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_one">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="1000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_repository"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        tools:text="1000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_follower"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        tools:text="1000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_following"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/icon_img_username"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/ic_person_black_24dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/content_description_username"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <TextView
            android:id="@+id/txt_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/icon_img_username"
            app:layout_constraintTop_toTopOf="@+id/icon_img_username" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_username_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_username_title"
            tools:text="JakeWharton"/>

        <ImageView
            android:id="@+id/icon_img_company"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_company_black_24dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/content_description_company"
            app:layout_constraintStart_toStartOf="@+id/icon_img_username"
            app:layout_constraintTop_toBottomOf="@+id/icon_img_username" />

        <TextView
            android:id="@+id/txt_company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_company"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/icon_img_company"
            app:layout_constraintTop_toTopOf="@+id/icon_img_company" />

        <TextView
            android:id="@+id/txt_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:lines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_company_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_company_title"
            tools:text="Pittsburgh, PA, USA"/>

        <ImageView
            android:id="@+id/icon_img_location"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_place_black_24dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/content_description_location"
            app:layout_constraintStart_toStartOf="@+id/icon_img_company"
            app:layout_constraintTop_toBottomOf="@+id/icon_img_company" />

        <TextView
            android:id="@+id/txt_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_location"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/icon_img_location"
            app:layout_constraintTop_toTopOf="@+id/icon_img_location" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_location_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_location_title"
            tools:text="Google, Inc."/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>